# ONOKORO_E559_24Apr

./: .gitignore  CMakeLists.txt  artemislogon.C  chmod.sh  make.sh  mapper.conf  mapper_rawcheck.conf  mapper_tamidaq.conf
macro/: energy_calib_Lippt.C  energy_calib_ppt.C  shift.C  test.C
runinfo/: ScaData.C  onokoro_2024apr_RunSummary.txt
scripts/: calib.C  calib.sh  eff_gr.C  eff_gr.sh  eff_las.C  eff_las.sh  phys.sh  phys_40Ca.C  phys_40Ca.sh  phys_carbon.C  phys_carbon.sh  phys_momentum.C  phys_momentum.sh  rawdata.C  rawdata.sh
shell/: calib.C  calib.sh  eff_gr.C  eff_gr.sh  eff_las.C  eff_las.sh  phys.C  phys.sh  rawdata.C  (+1 more)
src/: CMakeLists.txt  TChargeCalibrationProcessor.cc  TChargeCalibrationProcessor.h  TCmdExpDB.h  TCmdPrint.lo  TFocalPlaneConverter.cc  TFocalPlaneConverter.h  TOpticsCalibrationProcessor.cc  TOpticsCalibrationProcessor.h  TOpticsData.cc  TOpticsData.h  TOpticsParameter.cc  TOpticsParameter.h  TPIDCalibrationProcessor.cc  TPIDCalibrationProcessor.h  TParticleData.cc  TParticleData.h  TParticleData.tmp.cc  TParticleData.tmp.h  TRFSubtractionProcessor.cc  TRFSubtractionProcessor.h  TSpectrometerProcessor.cc  TSpectrometerProcessor.cc.tmp  TSpectrometerProcessor.h  TSpectrometerProcessor.h.tmp  TSpectrometerProcessor.tmp.cc  TSpectrometerProcessor.tmp.h  TTOFCalibrationProcessor.h  TTimingChargeMultiHitMappingProcessor.cc  TTimingChargeMultiHitMappingProcessor.h  TTimingTrefValidator.cc  TTimingTrefValidator.h  TTimingTrefValidatorLR.cc  TTimingTrefValidatorLR.cc.tmp  TTimingTrefValidatorLR.h  TVDCClusterData.cc  TVDCClusterData.h  TVDCClusterizationSizeSelectableProcessor.cc  TVDCClusterizationSizeSelectableProcessor.h  TVDCGeometryConverter.cc  (+4 more)
(+933 files in other folders)
